# Axiom-Robotics

./: .gitattributes  .gitignore  README.md
axiom_ws/install/: local_setup.sh  setup.sh
axiom_ws/install/axiom_base_bridge/lib/axiom_base_bridge/: bridge
axiom_ws/install/axiom_base_bridge/share/axiom_base_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
axiom_ws/log/: latest_build
axiom_ws/rosbag2_2025_10_31-01_53_16/: rosbag2_2025_10_31-01_53_16_0.mcap
axiom_ws/src/axiom_arm/: package.xml
axiom_ws/src/axiom_base_bridge/: package.xml
axiom_ws/src/axiom_bringup/: package.xml
axiom_ws/src/axiom_mission/: package.xml
axiom_ws/src/axiom_perception/: package.xml
axiom_ws/src/axiom_refbox_bridge/: package.xml
axiom_ws/src/axiom_reverse_guard/: package.xml
axiom_ws/src/axiom_utils/: package.xml
